--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -17,3 +17,15 @@
     }
   }
 }
+
+
+// .wg-about-avatar .avatar {
+//   width: 100% !important;
+//   height: 100% !important;
+//   max-width: unset !important;
+// }
+
+// .wg-about-avatar .avatar-wrapper {
+//   width: 1350px !important;
+//   height: 1350px !important;
+// }
