--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -14,10 +14,10 @@
     {{ $is_sponsor := site.Params.i_am_a_sponsor | default false }}
     {{ $hide_published_with_footer := site.Params.power_ups.hide_published_with | default true }}
     {{ if not (and $is_sponsor $hide_published_with_footer) }}
-      {{ $default := "This website is create with the Wowchemy's Template.<br>[The source code of this website is at Eason's GitHub](https://github.com/EasonC13/eason.phd)" }}
+      {{ $default := "This website was created with the Wowchemy's Template.<br>[The source code of this website is at Eason's GitHub](https://github.com/EasonC13/eason.phd)" }}
       {{ $i18n_published_with := i18n "published_with" | default $default }}
       {{ if not (findRE "{wowchemy}" $i18n_published_with) }}
-        {{ warnf "Please attribute Wowchemy using `{wowchemy}` in the `published_with` text." }}
+        {{/*  {{ warnf "Please attribute Wowchemy using `{wowchemy}` in the `published_with` text." }}  */}}
         {{ $i18n_published_with = $default }}
       {{ end }}
       {{ $i18n_published_with = replace $i18n_published_with "{wowchemy}" "<a href=\"https://wowchemy.com/?utm_campaign=poweredby\" target=\"_blank\" rel=\"noopener\">Wowchemy</a>" | safeHTML }}
